<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kradar</string>
    <string name="action_settings">Settings</string>
	<string name="introScreen">Welcome to Kradar, Kill enemies with your friend\'s help</string>
 	<string name="Attack">ATTACK!</string>
 	<string name="Friends">Friends be here</string>
 	<string name="Updates">Add Friends</string>
	<string name="Charge">Charge Bar</string>
	<string name="info_add">Please insert your friend\'s phone number below</string>
	<string name="self_add">Please insert your phone number below</string>
	<string name="entor">Enter</string>
	<string name="Title">Enter Phone Number</string>
	<string name="cansel">Cancel</string>
</resources>
