<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/introScreen" />

    <TextView
        android:id="@+id/charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chargebar"
        android:layout_alignLeft="@+id/Friends"
        android:layout_alignRight="@+id/attack"
        android:text="@string/Charge" />

    <Button
        android:id="@+id/attack"
        android:background="@drawable/dark_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/Attack" />

    <ProgressBar
        android:id="@+id/chargebar"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="1000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Friends"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/Friends"
        android:background="@drawable/heal_button"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/attack"
        android:layout_below="@+id/attack"
        android:text="@string/Friends" 
        style="@style/button_text"/>

    <Button
        android:id="@+id/add"
        android:background="@drawable/heal_button"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/attack"
        android:layout_below="@+id/attack"
        android:text="@string/Updates"
        style="@style/button_text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:src="@drawable/images" />

</RelativeLayout>